syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "itemP.proto";
import "customerP.proto";

option csharp_namespace = "Application";
option java_multiple_files = true;
option java_package = "sep3.server";
option java_outer_classname = "OrderProto";

message OrderP {
  int32 id = 1;
  CustomerP customer = 2;
  repeated ItemP items = 3;
  AddressP address = 4;
  string orderDate =5;
  string deliveryDate = 6;
  bool isConfirmed =7;
  double totalPrice=8;
}


message OrderResponseP{
  OrderP order = 1;
}

message CreateOrderP{
  string customerUsername=1;
  int32 addressId =2;
  repeated ItemP items = 3;
  string orderDate =4;
  double totalPrice=5;
}

message SuccessMessage{
  string message=1;
}

message OrderPRequest {
  string customerUsername = 1;
  repeated ItemP items = 2;
  OrderP oder =3;
}
message ConfirmationResponse {
  bool success = 1;
  string deliveryDate=2;
}
message AllOrdersResponse{
  repeated OrderP ordersP =1;
}
message CustomerIdRequest{
  int32 customerId = 1;
}
message OrderIdToConfirm{
  int32 orderId=1;
}

service OrderService{
  rpc createOrder(CreateOrderP) returns (SuccessMessage){};
  rpc confirmOrder(OrderIdToConfirm) returns (ConfirmationResponse){};
  rpc getAllOrders(google.protobuf.Empty) returns (AllOrdersResponse){};
  rpc getAllOrdersWithCustomerId (CustomerIdRequest) returns (AllOrdersResponse){};
}